Added setting allowance for the tokens Added ability to place bid on an auction

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -7,6 +7,7 @@
 
   {{> auction}}
   {{> createauction}}
+  {{> allowance}}
 </body>
 
 <template name="auction">
@@ -68,4 +69,8 @@
       </tr>
     </tfoot>
   </table>  
+</template>
+
+<template name="allowance">
+  <button {{b "click: create"}}>Check allowance</button>
 </template>
