Added auctionlet template setup

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -44,6 +44,28 @@
   </table>
 </template>
 
+<template name="auctionlet">
+  <h2>Latest auction</h2>
+  <table>
+    <tr>
+      <td>Last bidder</td>
+      <td>0xa1bff93e4c672727e6001528e25bbb5568c81a6d</td>
+    </tr>
+    <tr>
+      <td>Last bid time</td>
+      <td>11-07-16</td>
+    </tr>
+    <tr>
+      <td>Buy amount</td>
+      <td>100</td>
+    </tr>
+    <tr>
+      <td>Sell amount</td>
+      <td>10</td>
+    </tr>
+  </table>
+</template>
+
 <template name="newauction">
   <h2>New auction</h2>
   <table>
