Updated frontend to use values from token auction contract

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -14,54 +14,54 @@
   <h2>Latest auction</h2>
   <table>
     <tr>
-      <td>Beneficiary</td>
-      <td>0xa1bff93e4c672727e6001528e25bbb5568c81a6d</td>
+      <td>Creator</td>
+      <td>{{creator}}</td>
     </tr>
     <tr>
       <td>Selling</td>
-      <td>ETH</td>
+      <td>{{selling}}</td>
     </tr>
     <tr>
       <td>Buying</td>
-      <td>MKR</td>
+      <td>{{buying}}</td>
     </tr>
     <tr>
       <td>Sell amount</td>
-      <td>100</td>
+      <td>{{sell_amount}}</td>
     </tr>
     <tr>
       <td>Start bid</td>
-      <td>10</td>
+      <td>{{start_bid}}</td>
     </tr>
     <tr>
       <td>Minimum increase</td>
-      <td>1</td>
+      <td>{{min_increase}}</td>
     </tr>
     <tr>
       <td>Duration</td>
-      <td>100000000</td>
+      <td>{{duration}}</td>
     </tr>
   </table>
 </template>
 
 <template name="auctionlet">
-  <h2>Latest auction</h2>
+  <h2>Auctionlet</h2>
   <table>
     <tr>
       <td>Last bidder</td>
-      <td>0xa1bff93e4c672727e6001528e25bbb5568c81a6d</td>
+      <td>{{last_bidder}}</td>
     </tr>
     <tr>
       <td>Last bid time</td>
-      <td>11-07-16</td>
+      <td>{{last_bid_time}}</td>
     </tr>
     <tr>
       <td>Buy amount</td>
-      <td>100</td>
+      <td>{{buy_amount}}</td>
     </tr>
     <tr>
       <td>Sell amount</td>
-      <td>10</td>
+      <td>{{sell_amount}}</td>
     </tr>
   </table>
 </template>
