Parsing of auction and auction let properties

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -51,15 +51,15 @@
     </tr>
     <tr>
       <td>Last bid time</td>
-      <td>{{last_bid_time}}</td>
+      <td>{{auctionlet.last_bid_time}}</td>
     </tr>
     <tr>
       <td>Buy amount</td>
-      <td>{{buy_amount}}</td>
+      <td>{{auctionlet.buy_amount}}</td>
     </tr>
     <tr>
       <td>Sell amount</td>
-      <td>{{sell_amount}}</td>
+      <td>{{auctionlet.sell_amount}}</td>
     </tr>
   </table>
 </template>
