--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -3,67 +3,75 @@
 </head>
 
 <body>
-  <h1>Token Auction Test</h1>
-  {{> auction}}
-  {{> auctionlet}}
+  <div class="container">
+    <div class="row">
+      <div class="col-cs-12">
+        <h1>Token Auction</h1>
+        {{> auction}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-cs-12">
+        {{> allowance}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-cs-12">
+        {{> auctionlet}}
+      </div>
+    </div>
+  </div>
 </body>
 
 <template name="auction">
   <h2>Latest auction</h2>
-  <table>
+  <table class="table table-condensed">
     <tr>
       <td>Creator</td>
-      <td>{{auction.creator}}</td>
+      <td><a href="http://testnet.etherscan.io/address/0xa1bff93e4c672727e6001528e25bbb5568c81a6d" target="_blank">{{auction.creator}}</a></td>
     </tr>
     <tr>
       <td>Selling</td>
-      <td>{{auction.selling}}</td>
-    </tr>
-    <tr>
-      <td>Buying</td>
-      <td>{{auction.buying}}</td>
-    </tr>
-    <tr>
-      <td>Sell amount</td>
-      <td>{{auction.sell_amount}}</td>
+      <td>{{auction.sell_amount}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
     </tr>
     <tr>
       <td>Start bid</td>
-      <td>{{auction.start_bid}}</td>
+      <td>{{auction.start_bid}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
     </tr>
     <tr>
       <td>Minimum increase</td>
       <td>{{auction.min_increase}}</td>
-    </tr>
-    <tr>
-      <td>Duration</td>
-      <td>{{auction.duration}}</td>
     </tr>
   </table>
 </template>
 
 <template name="auctionlet">
   <h2>Auctionlet</h2>
-  <table>
+  <table class="table">
+    <tr>
+      <td>Selling</td>
+      <td>{{auctionlet.sell_amount}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
+    </tr>
     <tr>
       <td>Last bidder</td>
-      <td>{{auctionlet.last_bidder}}</td>
+      <td><a href="http://testnet.etherscan.io/address/0xa1bff93e4c672727e6001528e25bbb5568c81a6d">{{auctionlet.last_bidder}}</a></td>
     </tr>
     <tr>
       <td>Last bid time</td>
       <td>{{auctionlet.last_bid_time}}</td>
     </tr>
     <tr>
-      <td>Buy amount</td>
-      <td>{{auctionlet.buy_amount}}</td>
+      <td>Highest bid</td>
+      <td>{{auctionlet.buy_amount}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
     </tr>
-    <tr>
-      <td>Sell amount</td>
-      <td>{{auctionlet.sell_amount}}</td>
-    </tr>
+
   </table>
-  <input type="number" min="0" {{b "value: bid"}}>
-  <button {{b "click: create"}}>Place bid</button>
+  <div class="form-group">
+    <label for="inputBid">Enter a bid for the auctionlet</label>
+    <input class="form-control" id="inputBid" type="number" min="{{bid}}" value="{{bid}}" {{b "value: bid"}}>
+    <button class="btn btn-primary" {{b "click: create"}}>Place bid</button>
+    <span id="spnPlacingBid" style="display:none">Bid is being placed</span>
+  </div>
 </template>
 
 <template name="newauction">
@@ -96,8 +104,12 @@
 </template>
 
 <template name="allowance">
-  <h2>Check and set allowance</h2>
-  <button {{b "click: create"}}>Check allowance</button>
+  <h2>Set allowance</h2>
+  <label for="btnSetAllowance">Allowance must be set before making a bid</label>
+    <br>
+  <button id="btnSetAllowance" {{b "click: create"}}>Check allowance</button>
+  <span id="spnSetAllowance" style="display:none">Setting allowance</span>
+  <span id="spnAllowanceSet" style="display:none">Allowance set, place a bid</span>
 </template>
 
 <template name="placebid">
