--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -27,6 +27,14 @@
   <h2>Latest auction</h2>
   <table class="table table-condensed">
     <tr>
+      <td>Contract address</td>
+      <td>0x6601758972dab5a8a807d890289e4bb2d0d22eca</td>
+    </tr>
+    <tr>
+      <td>Auction id</td>
+      <td>{{auction.auctionId}}</td>
+    </tr>
+    <tr>
       <td>Creator</td>
       <td><a href="http://testnet.etherscan.io/address/0xa1bff93e4c672727e6001528e25bbb5568c81a6d" target="_blank">{{auction.creator}}</a></td>
     </tr>
@@ -42,12 +50,20 @@
       <td>Minimum increase</td>
       <td>{{auction.min_increase}}</td>
     </tr>
+    <tr>
+      <td>Duration</td>
+      <td>{{auction.duration}}</td>
+    </tr>
   </table>
 </template>
 
 <template name="auctionlet">
   <h2>Auctionlet</h2>
   <table class="table">
+    <tr>
+      <td>Auctionlet id</td>
+      <td>{{auctionlet.auctionletId}}</td>
+    </tr>
     <tr>
       <td>Selling</td>
       <td>{{auctionlet.sell_amount}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
