Contract address hardcoded replaced

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -48,7 +48,7 @@
   <table class="table table-condensed">
     <tr>
       <td>Contract address</td>
-      <td>0x6601758972dab5a8a807d890289e4bb2d0d22eca</td>
+      <td>{{contractaddress}}</td>
     </tr>
     <tr>
       <td>Auction id</td>
