--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -18,7 +18,6 @@
     <div class="row">
       <div class="col-cs-12">
         {{> allowance}}
-        {{> newauction}}
       </div>
     </div>
     <div class="row">
@@ -26,8 +25,18 @@
         {{> auctionlet}}
       </div>
     </div>
+    <div class="row">
+      <div class="col-cs-12">
+        {{> test}}
+      </div>
+    </div>
   </div>
 </body>
+
+<template name="test">
+  <h2>Test</h2>
+  <button id="btnTest" {{b "click: create"}}>Test</button>
+</template>
 
 <template name="balance">
   <h2>Balance</h2>
