Refactored dapple code for erc20 tokens and fixed issue with balance not being shown

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -42,12 +42,12 @@
   <h2>Balance</h2>
   <table class="table table-condensed">
     <tr>
-      <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{mkrName}}</a></td>
-      <td>{{mkrBalance}}</td>
+      <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{mkrName}} in wei</a></td>
+      <td>{{mkrToken.balance}}</td>
     </tr>
     <tr>
-      <td><a href="http://testnet.etherscan.io/address/{{ethAddress}}">{{ethName}}</a></td>
-      <td>{{ethBalance}}</td>
+      <td><a href="http://testnet.etherscan.io/address/{{ethAddress}}">{{ethName}} in wei</a></td>
+      <td>{{ethToken.balance}}</td>
     </tr>
   </table>
 </template>
