--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -23,6 +23,12 @@
   </div>
 </body>
 
+<template name="test">
+  <h2>Test</h2>
+  <button class="btn btn-primary" {{b "click: create"}}>Test</button>
+  <span id="spnPlacingBid" style="display:none">Button clicked</span>
+</template>
+
 <template name="claimbid">
   <h2>Claim bid</h2>
   <button class="btn btn-primary" {{b "click: create"}}>Place bid</button>
@@ -33,12 +39,12 @@
   <h2>Balance</h2>
   <table class="table table-condensed">
     <tr>
-      <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{mkrName}} in wei</a></td>
-      <td>{{mkrToken.balance}}</td>
+      <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{mkrName}}</a></td>
+      <td>{{formatBalance (fromWei mkrToken.balance)}}</td>
     </tr>
     <tr>
-      <td><a href="http://testnet.etherscan.io/address/{{ethAddress}}">{{ethName}} in wei</a></td>
-      <td>{{ethToken.balance}}</td>
+      <td><a href="http://testnet.etherscan.io/address/{{ethAddress}}">{{ethName}}</a></td>
+      <td>{{formatBalance (fromWei ethToken.balance)}}</td>
     </tr>
   </table>
 </template>
@@ -60,15 +66,15 @@
     </tr>
     <tr>
       <td>Selling</td>
-      <td>{{auction.sell_amount}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
+      <td>{{formatBalance (fromWei auction.sell_amount)}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
     </tr>
     <tr>
       <td>Start bid</td>
-      <td>{{auction.start_bid}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
+      <td>{{formatBalance (fromWei auction.start_bid)}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
     </tr>
     <tr>
       <td>Minimum increase</td>
-      <td>{{auction.min_increase}}</td>
+      <td>{{formatBalance (fromWei auction.min_increase)}}</td>
     </tr>
     <tr>
       <td>Duration</td>
@@ -86,7 +92,7 @@
     </tr>
     <tr>
       <td>Selling</td>
-      <td>{{auctionlet.sell_amount}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
+      <td>{{formatBalance (fromWei auctionlet.sell_amount)}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
     </tr>
     <tr>
       <td>Last bidder</td>
@@ -98,13 +104,13 @@
     </tr>
     <tr>
       <td>Highest bid</td>
-      <td>{{auctionlet.buy_amount}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
+      <td>{{formatBalance (fromWei auctionlet.buy_amount)}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
     </tr>
 
   </table>
   <div class="form-group">
     <label for="inputBid">Enter a bid for the auctionlet</label>
-    <input class="form-control" id="inputBid" type="number" min="{{bid}}" value="{{bid}}" {{b "value: bid"}}>
+    <input class="form-control" id="inputBid" type="number" min="{{fromWei bid}}" value="{{fromWei bid}}" {{b "value: bid"}}>
     <button class="btn btn-primary" {{b "click: create"}}>Place bid</button>
     <span id="spnPlacingBid" style="display:none">Bid is being placed</span>
     <span id="spnBalanceInsufficient" style="display:none">Your balance is insufficient</span>
