--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -110,7 +110,7 @@
   </table>
   <div class="form-group">
     <label for="inputBid">Enter a bid for the auctionlet</label>
-    <input class="form-control" id="inputBid" type="number" min="{{fromWei bid}}" value="{{fromWei bid}}" {{b "value: bid"}}>
+    <input class="form-control" id="inputBid" type="number" min="{{bid}}" value="{{bid}}" {{b "value: bid"}}>
     <button class="btn btn-primary" {{b "click: create"}}>Place bid</button>
     <span id="spnPlacingBid" style="display:none">Bid is being placed</span>
     <span id="spnBalanceInsufficient" style="display:none">Your balance is insufficient</span>
