Added eth/mkr formatting for new auction

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -20,6 +20,16 @@
         {{> auctionlet}}
       </div>
     </div>
+    <div class="row">
+      <div class="col-cs-12">
+        {{> newauction}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-cs-12">
+        {{> allowance}}
+      </div>
+    </div>
   </div>
 </body>
 
