json helper for object dump

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -153,7 +153,7 @@
         <td><button {{b "click: create"}}>Create auction</button></td>
       </tr>
     </tfoot>
-  </table>  
+  </table>
 </template>
 
 <template name="allowance">
@@ -172,7 +172,7 @@
     <tr>
       <td>{{type}}</td>
       <td>{{tx}}</td>
-      <td>{{object}} </td>
+      <td>{{json object}} </td>
     </tr>
     {{/each}}
   </table>
