Fixed and refactored auction creation

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -22,6 +22,11 @@
     </div>
     <div class="row">
       <div class="col-cs-12">
+        {{> newauction}}
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-cs-12">
         {{> tokens}}
       </div>
     </div>
