Account of user is now shown

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -48,6 +48,10 @@
   <h2>Balance</h2>
   <table class="table table-condensed">
     <tr>
+      <td>Account</td>
+      <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{account}}</a></td>
+    </tr>
+    <tr>
       <td><a href="http://testnet.etherscan.io/address/{{mkrAddress}}">{{mkrName}}</a></td>
       <td>{{formatBalance (fromWei mkrToken.balance)}}</td>
     </tr>
