#20 Status updates for creating a new auction

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -172,6 +172,11 @@
       <tr>
         <td><button {{b "click: create"}}>Create auction</button></td>
       </tr>
+      {{#if newAuctionMessage}}
+        <tr>
+          <td><span id='newAuctionMessage'>{{newAuctionMessage}}</span></td>
+        </tr>
+      {{/if}}
     </tfoot>
   </table>
 </template>
