#20 Status updates via reactive variables for claiming a bid

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -139,6 +139,9 @@
       {{#if auctionlet.unclaimed}}
         <span>You made the highest bid. Click to receive the tokens</span>
         <button class="btn btn-primary" {{b "click: claim"}}>Claim</button>
+        {{#if claimMessage}}
+          <span id='spnClaimMessage'>{{ claimMessage }}</span>
+        {{/if}}
       {{else}}
         <span>You have claimed the tokens</span>
       {{/if}}
