--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -64,11 +64,11 @@
     </tr>
     <tr>
       <td>Selling</td>
-      <td>{{formatBalance (fromWei auction.sell_amount)}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
+      <td>{{formatBalance (fromWei auction.sell_amount)}} <a href="http://testnet.etherscan.io/address/{{MKRToken.address}}" target="_blank">{{MKRToken.name}}</a></td>
     </tr>
     <tr>
       <td>Start bid</td>
-      <td>{{formatBalance (fromWei auction.start_bid)}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
+      <td>{{formatBalance (fromWei auction.start_bid)}} <a href="http://testnet.etherscan.io/address/{{ETHToken.address}}" target="_blank">{{ETHToken.name}}</a></td>
     </tr>
     <tr>
       <td>Minimum increase</td>
@@ -90,7 +90,7 @@
     </tr>
     <tr>
       <td>Selling</td>
-      <td>{{formatBalance (fromWei auctionlet.sell_amount)}} <a href="http://testnet.etherscan.io/address/0xffb1c99b389ba527a9194b1606b3565a07da3eef" target="_blank">MKR</a></td>
+      <td>{{formatBalance (fromWei auctionlet.sell_amount)}} <a href="http://testnet.etherscan.io/address/{{MKRToken.address}}" target="_blank">{{MKRToken.name}}</a></td>
     </tr>
     <tr>
       <td>Last bidder</td>
@@ -102,7 +102,7 @@
     </tr>
     <tr>
       <td>Highest bid</td>
-      <td>{{formatBalance (fromWei auctionlet.buy_amount)}} <a href="http://testnet.etherscan.io/address/0x52fe88b987c7829e5d5a61c98f67c9c14e6a7a90" target="_blank">ETH</a></td>
+      <td>{{formatBalance (fromWei auctionlet.buy_amount)}} <a href="http://testnet.etherscan.io/address/{{ETHToken.address}}" target="_blank">{{ETHToken.name}}</a></td>
     </tr>
   </table>
   {{#unless expired}}
@@ -138,11 +138,11 @@
     <tbody>
       <tr>
         <td>Sell amount</td>
-        <td><input type="number" min="0" {{b "value: sellamount"}}> MKR</td>
+        <td><input type="number" min="0" {{b "value: sellamount"}}> <a href="http://testnet.etherscan.io/address/{{MKRToken.address}}" target="_blank">{{MKRToken.name}}</a></td>
       </tr>
       <tr>
         <td>Start bid</td>
-        <td><input type="number" min="0" {{b "value: startbid"}}> ETH</td>
+        <td><input type="number" min="0" {{b "value: startbid"}}> <a href="http://testnet.etherscan.io/address/{{ETHToken.address}}" target="_blank">{{ETHToken.name}}</a></td>
       </tr>
       <tr>
         <td>Minimum increase</td>
