Styled create auction button

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -155,7 +155,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <td><button {{b "click: create"}}>Create auction</button></td>
+        <td><button class="btn btn-primary" {{b "click: create"}}>Create auction</button></td>
       </tr>
       {{#if newAuctionMessage}}
         <tr>
